--- a/res/layout/story_listview_custom_row.xml
+++ b/res/layout/story_listview_custom_row.xml
@@ -50,7 +50,11 @@ University of Maryland to appear in their names.
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+	android:paddingTop="@dimen/activity_horizontal_margin"
+	android:paddingBottom="@dimen/activity_horizontal_margin"
+	android:paddingLeft="@dimen/activity_horizontal_margin"
+	android:paddingRight="@dimen/activity_horizontal_margin">
 
     <TextView
          android:id="@+id/story_listview_custom_row_KEY_ID_textView"
@@ -79,5 +83,27 @@ University of Maryland to appear in their names.
          android:textSize="16sp"
          android:layout_below="@+id/story_listview_custom_row_title_textView"
          />
-    
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentRight="true"
+		>
+		<ImageView
+			android:id="@+id/story_listview_custom_row_has_image"
+			android:layout_width="16dp"
+			android:layout_height="16dp"
+		    android:src="@android:drawable/ic_menu_gallery"
+			/>
+		<ImageView
+			android:id="@+id/story_listview_custom_row_has_audio"
+			android:layout_width="16dp"
+			android:layout_height="16dp"
+			android:src="@android:drawable/ic_btn_speak_now"
+			/>
+		<ImageView
+			android:layout_width="16dp"
+			android:layout_height="16dp"
+			android:src="@android:drawable/ic_menu_camera"
+			/>
+	</LinearLayout>
 </RelativeLayout>
